--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "start": "concurrently \"npm run dev\" \"npm run start-backend\"",
+    "start-backend": "cd backend && npm run dev"
   },
+  "proxy": "http://localhost:3333/notes",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.5",
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
